--- a/_posts/2019-02-24-muqueue.markdown
+++ b/_posts/2019-02-24-muqueue.markdown
@@ -4,7 +4,8 @@ title: "MuQueue"
 img: muqueue-banner.png # Add image post (optional)
 date: 2019-02-24 12:50:00 +0300
 description: MuQueue is an app created by Nyah's team as part of the Hack the Valley 3 Hackathon.
-tag: [HTV3, Python, JS, GCP, HTML, CSS]
+tag: [projects]
+category: projects
 ---
 MuQueue is an app created as part of the Hack the Valley 3 Hackathon. 
 
