--- a/_posts/2000-01-01-resume.markdown
+++ b/_posts/2000-01-01-resume.markdown
@@ -25,11 +25,22 @@ category: pages
     Toronto, Ontario 2018 - 2022
   </p>
 	<ul class="details">
-		<li>Computer Science Specialist Co-op Program, 3rd year</li>
+		<li>Computer Science Specialist Co-op Program, 4th year</li>
 		<li>University of Toronto Scholar</li>
 		<li>CGPA: 3.95 (out of 4)</li>
 	</ul>
 	<h3 class="section_header">EXPERIENCE</h3>
+	<h5 class="resume_title">
+    Software Engineer (Co-op) at <a href="https://www.indexexchange.com/">Index Exchange</a>
+  </h5>
+  <p class="date">
+    Remote (Toronto, Ontario) 01/2021 - 04/2021
+  </p>
+	<ul class="details">
+		<li>Recorded metrics data in production databases to highlight inefficiencies in development, review, and deployment.</li>
+		<li>Developed dashboard using SQL to display rolling averages and trends based on time metrics.</li>
+		<li>Met with stakeholders on weekly basis to provide detailed project report and milestone updates.</li>
+	</ul>
 	<h5 class="resume_title">
     Software Full Stack and QA Developer (Co-op) at <a href="https://www.kobo.com/">Rakuten Kobo</a>
   </h5>
@@ -45,7 +56,7 @@ category: pages
     Undergraduate Teaching Assistant at <a href="https://www.utsc.utoronto.ca/home/">University of Toronto Scarborough</a>
   </h5>
   <p class="date">
-    Toronto, Ontario 04/2019 - 12/2020
+    Toronto, Ontario 04/2019 - 04/2021
   </p>
 	<ul class="details">
 		<li>Checked assignments, proctored tests, and provided grades according to university standards.</li>
