--- a/_posts/2000-01-01-events.markdown
+++ b/_posts/2000-01-01-events.markdown
@@ -13,7 +13,9 @@ This is a list of conferences and events I have had the privilege of attending, 
 
   ## 2021
   <p class="no-padding">
-    <a href="https://events.google.com/io?lng=en" target="_blank">Google I/O</a>
+    <a href="https://events.google.com/io?lng=en" target="_blank">Google I/O</a><br>
+    <a href="https://www.instagram.com/stories/highlights/17915647744745015/" target="_blank">UTSC Arts & Science Co-op Instagram Feature</a><br>
+    <a href="https://github.com/csecutsc/csec_files/blob/0eec1f216571e339c525c22b748e40c6893b4840/2021/World%20of%20Work%202021.pdf" target="_blank">CSEC World of Work Panelist</a>
   </p>
   <br>
 
