--- a/_posts/2021-12-08-showcase.markdown
+++ b/_posts/2021-12-08-showcase.markdown
@@ -11,7 +11,7 @@ category: coursework
 As part of an entrepreneurship course, we researched, gathered feedback, and created an app called **Showcase** to help actors and others in the film industry connect and advance their careers.
 
 Showcase's final demo:
-<iframe src="https://www.youtube.com/embed/94w-ewBquig" <iframe style="width:100%;height:500px" allow="autoplay"></iframe>
+<iframe src="https://www.youtube.com/embed/94w-ewBquig?rel=0" style="width:100%;height:500px" allow="autoplay"></iframe>
 
 As part of this course, we created a business model canvas centered around the app, and interviewed professionals who would use our app to connect with others. This led us to create the prototype and focus on the features and aspects that we did. Namely:
  - Creating and supporting connections between actors
@@ -35,7 +35,7 @@ Thank you to my amazing team without whom I would not have been able to complete
 
 Below are some photos of our app (Showcase). The first is the main feed, second is the networking map view showing a user's connections, and the mini-display of a user that pops up from it. Last is the profile page for a user showing their headshots, data, and credits.
 <div style="display: flex;flex-direction: row;justify-content: space-around; background-color: darkseagreen; flex-wrap: wrap; padding: 10px 0">
-<img src="../assets/img/showcase-main-feed.png" alt="Main feed" style="max-height:400px" /> <img src="../assets/img/showcase-networking-map.png" alt="Networking map" style="max-height:400px" /> <img src="../assets/img/showcase-networking-map-drawer.png" alt="Networking map drawer" style="max-height:400px" /> <img src="../assets/img/showcase-profile.png" alt="User's profile page" style="max-height:400px" /></div>
+<img src="../assets/img/showcase-main-feed.png" alt="Main feed" style="max-height:400px; padding-bottom:10px" /> <img src="../assets/img/showcase-networking-map.png" alt="Networking map" style="max-height:400px; padding-bottom:10px" /> <img src="../assets/img/showcase-networking-map-drawer.png" alt="Networking map drawer" style="max-height:400px; padding-bottom:10px" /> <img src="../assets/img/showcase-profile.png" alt="User's profile page" style="max-height:400px; padding-bottom:10px" /></div>
 
 
 [jackson]: https://jtrcode.github.io/
