--- a/_posts/2000-01-01-events.markdown
+++ b/_posts/2000-01-01-events.markdown
@@ -1,6 +1,6 @@
 ---
 layout: page
-title: "Events"
+title: "Events & Awards"
 img: conference.jpg # Add image post (optional)
 date: 2000-01-01 12:00:00 +0300
 description: Events and conferences that Nyah Way has attended, and rewards that she has received.
@@ -12,6 +12,8 @@ This is a list of conferences and events I have had the privilege of attending, 
 <div class="events">
   <h2>2022</h2>
   <p class="no-padding">
+    <a href="https://www.utsc.utoronto.ca/ctl/utsc-teaching-awards" target="_blank">2021-22 CMS Teaching Assistant Award</a><br>
+    <a href="https://www.utsc.utoronto.ca/registrar/automatic-awards" target="_blank">University of Toronto Scarborough Dean's List</a><br>
     <a href="https://utsc.utoronto.ca/admissions/" target="_blank">Explore UTSC Co-op Panelist</a><br>
     <a href="https://www.utsc.utoronto.ca/registrar/eligibility" target="_blank">High Distinction Graduate</a><br>
     Tom Hull Scholarship In Computer Science
